<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_background"
    android:backgroundTint="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_etFirstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background_white"
            android:fontFamily="@font/bpg_nino_mtavruli_normal"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_etLastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background_white"
            android:fontFamily="@font/bpg_nino_mtavruli_normal"
            android:hint="@string/lastname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dialog_etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background_white"
            android:fontFamily="@font/bpg_nino_mtavruli_normal"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btnEditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_edit_backgorund_white_left"
            android:fontFamily="@font/bpg_nino_mtavruli_normal"
            android:text="@string/edit_dialog"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btnDeleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_edit_backgorund_white_right"
            android:fontFamily="@font/bpg_nino_mtavruli_normal"
            android:text="@string/delete"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>